Archivos listos para repositorio

--- a/src/componentes/Campo/Campo.css
+++ b/src/componentes/Campo/Campo.css
@@ -1,16 +1,16 @@
-.campo-texto{
+.campo{
     margin: 24px 0;
     font-family: 'Montserrat', sans-serif;;
 }
 
-.campo-texto label{
+.campo label{
     font-size: 18px;
     font-weight: 600;
     display: block;
     margin-bottom: 8px;
 }
 
-.campo-texto input{
+.campo input{
     width: 100%;
     background-color: white;
     border: none;
@@ -19,4 +19,9 @@
     outline-color: #6278F7; /*colo de borde cuando hacemos focus*/
     font-size: 16px;
     box-sizing: border-box; /*Investigar*/
+}
+
+.campo-color input {
+    height: 40px;
+    padding: 5px 20px;
 }
